Fixed importing training data files using imput stream.